# oopCourseHomeWork

./: CMakeLists.txt  main.cpp
address_hw/: LuckyNumber.h
building_hw/: Apartment.cpp  Apartment.h  Bathroom.cpp  Bathroom.h  Building.cpp  Building.h  Elevator.cpp  Elevator.h  Room.cpp  Room.h
invoice_hw/: Invoice.cpp  Invoice.h
